--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <caption> <h2>Wishlist global</h2></caption>
     <tr>
         <td>Inglaterra</td>
-        <td> <img src = 'imagens/inglaterra.jpg' alt = 'Inglaterra' width="300" height="200"</td>
+        <td> <img src = 'imagens/Inglaterra.jpg' alt = 'Inglaterra' width="300" height="200"</td>
 
     </tr>
     <tr>
