--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <h1>Tainara Martinez de Araújo</h1>
     <p>Me chamo Tainara Martinez, tenho 21 anos, e moro em Sarzedo. Já morei em diversos lugares, mas sempre dentro de Minas Gerais. Atualmente trabalho em uma loja, e estou cursando Engenharia de Software e também curso pedagogia. Já trabalhei dois anos com educação inclusiva em escolas, e acho que foi uma experiência incrível. Poder fazer um estágio durante o curso, mesmo sem ser o obrigatório nos ajuda a entender mais da questão prática do curso, ajuda a ampliar ideias, e nos tira daquela ideia teórica da coisa.</p>
-    <ul><h2>Meus hobbies</h2></ul>
- <li class="linha">Ler livros</li>
- <li class="linha">Jogos eletrônicos</li>  
- <li class="linha">Pinturas</li>  
+           <h2>Meus hobbies</h2>
+ <ul>
+    <li class="linha">Ler livros</li>
+    <li class="linha">Jogos eletrônicos</li>  
+    <li class="linha">Pinturas</li>  
+ </ul>
  <img src= 'imagens/pintura.jpg' alt = 'pintura' width="383" height="200" class="pintura">
   <h3>Inclusive...</h3>
   <p> Se juntarmos jogos eletrônicos com pinturas, podemos ter meu personagem favorito de um jogo. Hwei é um pintor dramático, que trabalha em sua arte todos os tormentos do vilarejo onde mora. Se tornou meu personagem favorito.</p>
@@ -27,16 +29,16 @@
     <caption> <h2>Wishlist global</h2></caption>
     <tr>
         <td>Inglaterra</td>
-        <td> <img src = 'imagens/inglaterra.jpg' alt = 'inglaterra' width="300" height="200"</td>
+        <td> <img src = 'imagens/inglaterra.jpg' alt = 'inglaterra' width="300" height="200"></td>
 
     </tr>
     <tr>
         <td>Suiça</td>
-        <td> <img src = 'imagens/suiça.jpg' alt = 'Suiça' width="300" height="200"</td>
+        <td> <img src = 'imagens/suiça.jpg' alt = 'Suiça' width="300" height="200"></td>
     </tr>
     <tr>
         <td>Itália</td>
-        <td> <img src = 'imagens/italia.jpg' alt = 'italia' width="300" height="200"</td>
+        <td> <img src = 'imagens/italia.jpg' alt = 'italia' width="300" height="200"></td>
     </tr>
 
 </table>
